<!--Tanggal Pengerjaan : 03/06/2024
    NIM : 10121010
    Nama : Reynaldi Azhari
    Kelas : Pemrograman Android 3-->
<resources>
    <string name="app_name">UTSAndroid-PEMANDRO3-10121010-ReynaldiAzhari</string>
    <string name="back_page">Halaman Kembali</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="confirmed_date">Tanggal Terkonfirmasi</string>
    <string name="consent_text">Dengan ini saya menyetujui bahwa data yang saya isikan adalah benar</string>
    <string name="female">Perempuan</string>
    <string name="form_title">Form Pengisian Data</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="hint_birth_date">Masukkan Tanggal Lahir</string>
    <string name="hint_name">Masukkan Nama</string>
    <string name="hint_nik">Masukkan NIK</string>
    <string name="info">Info</string>
    <string name="info_description">Form berikut ini bertujuan untuk memberikan informasi kepada pusat agar dapat mudah dilaporkan</string>
    <string name="male">Laki-Laki</string>
    <string name="mandatory_field">- Harus Diisi</string>
    <string name="name">Nama</string>
    <string name="next_button">Selanjutnya</string>
    <string name="nik">NIK</string>
    <string name="pcr_test">PCR</string>
    <string name="rapid_antigen">Rapid Antigen</string>
    <string name="relation_child">Anak</string>
    <string name="relation_other">Kerabat Lainnya</string>
    <string name="relation_parent">Orangtua</string>
    <string name="relation_spouse">Suami/Istri</string>
    <string name="relation_with_parent">Hubungan Dengan Orang Tua</string>
    <string name="select_date">Pilih Tanggal</string>
    <string name="test_type">Jenis Tes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
