<?xml version="1.0" encoding="utf-8"?>
<!--Tanggal Pengerjaan : 03/06/2024
    NIM : 10121010
    Nama : Reynaldi Azhari
    Kelas : Pemrograman Android 3-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left_arrow"
            android:gravity="start"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/back_page" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:background="@drawable/info_title_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <LinearLayout
                android:background="@drawable/info_border"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:layout_marginStart="-20dp"
                android:layout_marginTop="-8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:lineHeight="14sp"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textFontWeight="700"
                    android:textSize="12sp"
                    tools:ignore="TextContrastCheck"
                    tools:targetApi="p" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="-30dp"
                android:layout_marginBottom="16dp"
                android:text="@string/info_description"
                android:textColor="#757575"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/test_type"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@string/mandatory_field"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/jenistes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rapid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rapid_antigen"/>
            <RadioButton
                android:id="@+id/pcr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pcr_test"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/confirmed_date"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/mandatory_field"
                android:textColor="#2E7D32"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/tgl_terkonfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/select_date"
            android:inputType="datetime"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_calendar"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/nik"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/nik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_nik"
            android:inputType="number"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/name"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/mandatory_field"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/birth_date"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/mandatory_field"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:background="@drawable/input_border"
            android:id="@+id/tgl_lahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_birth_date"
            android:inputType="datetime"
            tools:ignore="TextContrastCheck,TextContrastCheck"
            android:importantForAutofill="no"
            android:drawableEnd="@drawable/ic_calendar"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/gender"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/mandatory_field"
                android:layout_marginTop="32dp"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/cowo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"/>
            <RadioButton
                android:id="@+id/cewe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/relation_with_parent"
                android:layout_marginTop="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/mandatory_field"
                android:textColor="@color/green"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/ortu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation_parent"/>
            <RadioButton
                android:id="@+id/nikah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation_spouse"/>
            <RadioButton
                android:id="@+id/anak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation_child"/>
            <RadioButton
                android:id="@+id/lainnya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relation_other"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/setuju"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_text" />

        </LinearLayout>

        <Button
            android:id="@+id/simpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/green"
            android:text="@string/next_button"/>

    </LinearLayout>
</ScrollView>
